[tool.poetry]
name = "odrive_s1"
version = "0.1.0"
description = "Polyflow ODrive S1 controller node"
authors = ["Drew Swinney <drew@polyflowrobotics.com>"]
packages = [{ include = "odrive-s1" }]

[tool.poetry.dependencies]
python = "^3.12"
rclpy = "*"
sensor-msgs = "*"
trajectory-msgs = "*"
odrive = "*"
eventlet = "*"

[tool.poetry.scripts]
odrive-s1_node = "odrive-s1.node:main"
