[tool.pdm.build]
includes = [
    "odrive_s1",
]

[project]
authors = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
maintainers = [
    {name = "Drew Swinney", email = "drew@polyflowrobotics.com"},
]
requires-python = ""
dependencies = [
    "odrive",
    "numpy",
    "python-can"
]
name = "odrive_s1"
version = "0.1.0"
description = "Polyflow ODrive S1 controller node"
license = {text = "MIT"}

[project.scripts]
odrive_s1_node = "odrive_s1.node:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
